k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-exercise
  labels:
    app.kubernetes.io/name: platform-exercise
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: platform-exercise
  ports:
    - name: http
      port: 80
      targetPort: http
